--- a/previews/PR348/tutorials/reparametrization/index.html
+++ b/previews/PR348/tutorials/reparametrization/index.html
@@ -10,7 +10,7 @@ U(t)&#39; = (1 - \alpha) \gamma E(t) - \delta U(t),\\
 I(t)&#39; = \alpha \gamma E(t) - \delta I(t),\\
 R(t)&#39; = \delta(U(t) + I(t)),\\
 y(t) = I(t)
-\end{cases}\]</p><p>In this model <code>S</code> is, as usually, the number of susceptible people, <code>E</code> is the number of people exposed to virus but not yet infected (as in a simple SEIR model<sup class="footnote-reference"><a id="citeref-1" href="#footnote-1">[1]</a></sup>), and <code>I</code> and <code>U</code> correspond to number of infected people who report the infection and who do not, respectively. We define the model but omit <code>R</code> compartment since it does not affect the output dynamics:</p><pre><code class="language-julia hljs">using StructuralIdentifiability
+\end{cases}\]</p><p>In this model <span>$S$</span> is, as usually, the number of susceptible people, <span>$E$</span> is the number of people exposed to virus but not yet infected (as in a simple SEIR model<sup class="footnote-reference"><a id="citeref-1" href="#footnote-1">[1]</a></sup>), and <span>$I$</span> and <span>$U$</span> correspond to number of infected people who report the infection and who do not, respectively. We define the model but omit <span>$R$</span> compartment since it does not affect the output dynamics:</p><pre><code class="language-julia hljs">using StructuralIdentifiability
 
 ode = @ODEmodel(
     S&#39;(t) = -b * (U(t) + I(t)) * S(t) / N,
@@ -36,20 +36,20 @@ y(t) = I(t)
 @assert isempty(reparam[:implicit_relations]) # checking that the result is an ODE on the whole space, not on a manifold
 reparam[:new_vars]</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Dict{Nemo.QQMPolyRingElem, AbstractAlgebra.Generic.FracFieldElem{Nemo.QQMPolyRingElem}} with 8 entries:
   y1(t) =&gt; y(t)
-  a3    =&gt; b//(N*a)
+  a3    =&gt; (N*a)//b
   X1(t) =&gt; I(t)
   a2    =&gt; d
   a1    =&gt; g
   X2(t) =&gt; S(t)*a
   X3(t) =&gt; U(t)*a + I(t)*a
   X4(t) =&gt; E(t)*a</code></pre><p>In these new variables and parameters, the original ODE can be rewritten as follows:</p><pre><code class="language-julia hljs">reparam[:new_ode]</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">X1&#39;(t) = -X1(t)*a2 + X4(t)*a1
-X2&#39;(t) = -X2(t)*X3(t)*a3
+X2&#39;(t) = (-X2(t)*X3(t))//a3
 X3&#39;(t) = -X3(t)*a2 + X4(t)*a1
-X4&#39;(t) = X2(t)*X3(t)*a3 - X4(t)*a1
+X4&#39;(t) = (X2(t)*X3(t) - X4(t)*a1*a3)//a3
 y1(t) = X1(t)
-</code></pre><p>In order to analyze this result, let us give more interpretable names to the new variables and parameters:</p><p class="math-container">\[I := I, \; \widetilde{E} := \alpha E, \widetilde{S} := \alpha, \; \widetilde{I} := \alpha (I + U), \; \gamma := \gamma,\;\delta := \delta,\;\widetilde{\beta} := \frac{\beta}{\alpha N}\]</p><p>Then the reparametrize system becomes</p><p class="math-container">\[\begin{cases}
-\widetilde{S}&#39;(t) = -\widetilde{\beta} \widetilde{S}(t) \widetilde{I}(t),\\
-\widetilde{E}&#39;(t) = \widetilde{\beta} \widetilde{S}(t) \widetilde{I}(t) - \gamma \widetilde{E}(t),\\
+</code></pre><p>In order to analyze this result, let us give more interpretable names to the new variables and parameters:</p><p class="math-container">\[I := I, \; \widetilde{E} := \alpha E, \widetilde{S} := \alpha, \; \widetilde{I} := \alpha (I + U), \; \gamma := \gamma,\;\delta := \delta,\;\widetilde{N} := \frac{\alpha N}{\beta}\]</p><p>Then the reparametrize system becomes</p><p class="math-container">\[\begin{cases}
+\widetilde{S}&#39;(t) = -\widetilde{S}(t) \widetilde{I}(t) / \widetilde{N},\\
+\widetilde{E}&#39;(t) = \widetilde{S}(t) \widetilde{I}(t) / \widetilde{N} - \gamma \widetilde{E}(t),\\
 \widetilde{I}&#39;(t) = -\delta \widetilde{I}(t) + \gamma\widetilde{E}(t),\\
 I&#39;(t) = \gamma\widetilde{E}(t) - \delta I(t),\\
 y(t) = I(t)
@@ -60,4 +60,4 @@ y(t) = I(t)
   X4(t) =&gt; :globally
   a1    =&gt; :globally
   a2    =&gt; :globally
-  a3    =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>T. Sauer, T. Berry, D. Ebeigbe, M. Norton, A. Whalen, S. Schiff, <a href="https://doi.org/10.1137/20m1353289"><em>Identifiability of infection model parameters early in an epidemic</em></a>, SIAM Journal on Control and Optimization, 2022;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../discrete_time/">« Identifiability of Discrete-Time Models (Local)</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.6.0 on <span class="colophon-date" title="Wednesday 21 August 2024 07:47">Wednesday 21 August 2024</span>. Using Julia version 1.10.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  a3    =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>T. Sauer, T. Berry, D. Ebeigbe, M. Norton, A. Whalen, S. Schiff, <a href="https://doi.org/10.1137/20m1353289"><em>Identifiability of infection model parameters early in an epidemic</em></a>, SIAM Journal on Control and Optimization, 2022;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../discrete_time/">« Identifiability of Discrete-Time Models (Local)</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Monday 20 January 2025 06:09">Monday 20 January 2025</span>. Using Julia version 1.11.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
